# sphere-gpu

./: .gitignore  CMakeLists.txt  build-and-run.sh  main.cu  run.sh
include/: Collisions.h  Field.h  Output.h  PotentialSolver.h  Source.h  Species.h  Thruster.h  World.h
src/: Collisions.cu  Field.cu  Output.cu  PotentialSolver.cu  Source.cu  Species.cu  Sphere.cu  Thruster.cu  World.cu
tests/: CMakeLists.txt  ExampleTests.cpp  demo_test.cu
